--- a/package.json
+++ b/package.json
@@ -21,5 +21,13 @@
         "request": "~2.30.0",
         "underscore": "~1.5.2",
         "underscore.string": "~2.3.3"
+    },
+    "main": "app.js",
+    "scripts": {
+        "start": "node app.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/nitinsai/sendEmail"
     }
 }
